cc_library(
    name = "centroid_tree",
    strip_include_prefix = "include/",
    hdrs = ["include/centroid_tree.h"],
    srcs = ["src/centroid_tree.c"],
)

cc_library(
    name = "tdigest",
    strip_include_prefix = "include/",
    hdrs = ["include/tdigest.h"],
    srcs = ["src/tdigest.c"],
)

cc_test(
    name = "tdigest_test",
    deps = [
        ":tdigest",
    ],
    srcs = [
        "test/tdigest_test.c",
    ],
)

cc_test(
    name = "centroid_tree_test",
    deps = [
        ":centroid_tree",
    ],
    srcs = [
        "test/centroid_tree_test.c",
    ],
)
