load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "centroid_tree.c",
        "centroid_tree.h",
        "centroid_tree_internal.c",
        "centroid_tree_internal.h",
        "node.c",
        "node.h",
        "node_list.c",
        "node_list.h",
        "stretchy_buffer.h",
        "tdigest.go",
        "tdigest.h",
    ],
    cgo = True,
    importpath = "github.com/example/project/go",
    visibility = ["//visibility:public"],
)
