load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "tdigest.c",
        "tdigest.go",
        "tdigest.h",
    ],
    cgo = True,
    copts = ["-O3"],
    importpath = "github.com/ajwerner/tdigest/go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["tdigest_test.go"],
    embed = [":go_default_library"],
)
