py_library(
    name = "tdigestc",
    srcs = glob(["tdigestc/*.py"]),
    data = ["//c:tdigest.so"],
)

py_test(
    name = "tdigestc_test",
    srcs = [
        "tdigestc_test.py",
    ],
    deps = [":tdigestc"],    
)

py_binary(
    name = "tdigest_debug",
    srcs = [
        "tdigest_debug.py",
    ],
    deps = [":tdigestc"],
    default_python_version="PY3",
)

load(":setuptools.bzl", "setuptools_pkg")

setuptools_pkg(
    name="pypi",
    setup_file="setup.py",
    lib=":tdigestc",
    
)
