package(default_visibility = ['//visibility:public'])

filegroup(name = "empty")
filegroup(
    name = "all",
    srcs = [ 
        "emcc.sh",
        "emar.sh",
        "@emscripten_toolchain//:all",
        "@emscripten_clang//:all",
    ],
)

# filegroup(
#     name = "emscripten_cache_content",
#     srcs = glob(["emscripten_cache/**/*"]),
# )

cc_toolchain(
    name = "wasm_toolchain",
    all_files = ":all",
    compiler_files = ":all",
    cpu = "wasm",
    dwp_files = ":empty",
    dynamic_runtime_libs = [":empty"],
    linker_files = ":all",
    objcopy_files = ":empty",
    static_runtime_libs = [":empty"],
    strip_files = ":empty",
    supports_param_files = 0,
)

cc_toolchain_suite(
    name = "emscripten",
    toolchains = {
         "wasm|emscripten": ":wasm_toolchain",
    },
)
